--- a/index.html
+++ b/index.html
@@ -2,24 +2,69 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    <title>Dating site</title>
     <meta name="viewport" content="width=device-width" initial-scale="1">
     <link rel=stylesheet type="text/css" href="styles/main.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <!-- <link rel="icon" href="images/favicon.ico" type="image/x-icon" /> -->
     <!-- <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" /> -->
 </head>
 
 <body>
-  
-  <header>
-  </header>
 
-  <main>
-  </main>
+    <header>
+        <h1>RESULTSS!!!!!</h1>
+    </header>
 
-  <footer>
-  </footer>
+    <main>
+        <section class="main-content">
 
-  <script type="text/javascript" src="js/main.js"></script>
+            <article class="user-info">
+                <img class="profile-pic" src="http://68.media.tumblr.com/4e2fe93247735a74061d622f531c6c2f/tumblr_mm85ftHFbD1qkodk4o1_1280.jpg" />
+                <nav>
+                    <button></button>
+                    <button></button>
+                </nav>
+                <ul>
+                    <li>{{name}}</li>
+                    <li>{{dob}}</li>
+                    <li>{{location}}</li>
+                </ul>
+            </article>
+            <aside class="match-info">
+                <article class="random-user">
+                    <img class="profile-pic" src="http://68.media.tumblr.com/4e2fe93247735a74061d622f531c6c2f/tumblr_mm85ftHFbD1qkodk4o1_1280.jpg" />
+                    <ul>
+                        <li>{{name}}</li>
+                        <li>{{dob}}</li>
+                        <li>{{location}}</li>
+                    </ul>
+                </article>
+                <article class="random-user">
+                    <img class="profile-pic" src="http://68.media.tumblr.com/4e2fe93247735a74061d622f531c6c2f/tumblr_mm85ftHFbD1qkodk4o1_1280.jpg" />
+                    <ul>
+                        <li>{{name}}</li>
+                        <li>{{dob}}</li>
+                        <li>{{location}}</li>
+                    </ul>
+                </article>
+                <article class="random-user">
+                    <img class="profile-pic" src="http://68.media.tumblr.com/4e2fe93247735a74061d622f531c6c2f/tumblr_mm85ftHFbD1qkodk4o1_1280.jpg" />
+                    <ul>
+                        <li>{{name}}</li>
+                        <li>{{dob}}</li>
+                        <li>{{location}}</li>
+                    </ul>
+                </article>
+            </aside>
+        </section>
+    </main>
+
+    <footer>
+    </footer>
+    <script src="js/vendor/jquery-3.1.1.min.js"></script>
+    <script src="js/vendor/handlebars-v4.0.5.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
+
 </html>
